welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()){
    ^SnakeBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur()){
    ^